--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: <%= ENV['MYSQL_ROOT_PASSWORD'] %>
+  password: pass
   host: db
 
 development:
@@ -27,6 +27,7 @@ development:
 test:
   <<: *default
   database: search-word-app_test
+  host: <%= ENV.fetch("APP_DATABASE_HOST") { 'db' } %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
