--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   web:
     build: .
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - 3000:3000
     volumes:
@@ -10,7 +11,7 @@ services:
     tty: true
     stdin_open: true
     environment:
-     MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: pass
     depends_on:
       - db
 
@@ -18,8 +19,7 @@ services:
     platform: linux/x86_64
     image: mysql:5.7
     environment:
-      MYSQL_USER: user
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: pass
     ports:
       - "3306:3306"
     volumes:
