--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,54 +1,62 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@1.1.2
-  heroku: circleci/heroku@1.2.3
-
-executors:
-  default:
-    working_directory: ~/search-word-app
-    docker:
-      - image: circleci/ruby:2.7
-        environment:
-          APP_DATABASE_HOST: "127.0.0.1"
-          BUNDLE_PATH: vendor/bundle
-          RAILS_ENV: test
-
-commands:
-  bundle-install:
-    steps:
-      - ruby-orbs/bundle-install:
-          bundle_clean: true
-          bundle_extra_args: ''
-          bundle_gemfile: Gemfile
-          bundle_jobs: 3
-          bundle_path: vendor/bundle
-          bundle_retry: 3
-          cache_key_prefix: v1-bundle-dependencies
-          restore_bundled_with: true
-
+  ruby: circleci/ruby@1.8.0
+  node: circleci/node@2.0.0
 jobs:
   build:
-    executor: default
+    docker:
+      - image: cimg/ruby:2.5.7
+    working_directory: ~/search-word-app
     steps:
       - checkout
-      - bundle-install
-
+      - run:
+          name: Install Dependencies
+          command: |
+            sudo apt-get update -qq
+            sudo apt-get install -y build-essential nodejs default-mysql-client default-libmysqlclient-dev vim
+      - ruby/install-deps
   test:
-    executor: default
+    parallelism: 3
     docker:
-      - image: circleci/mysql:5.5
+      - image: cimg/ruby:2.5.7
+      - image: cimg/mysql:8.0
         environment:
           MYSQL_ROOT_PASSWORD: pass
+    environment:
+      BUNDLE_JOBS: "3"
+      BUNDLE_RETRY: "3"
+      APP_DATABASE_HOST: "127.0.0.1"
+      RAILS_ENV: test
+    working_directory: ~/search-word-app
     steps:
-      - checkout:
-      - bundle-install
+      - checkout
+      - run:
+          name: Install Dependencies
+          command: |
+            sudo apt-get update -qq
+            sudo apt-get install -y build-essential nodejs default-mysql-client default-libmysqlclient-dev vim
+      - run:
+          name: Install timezone data
+          command: sudo apt-get install -y tzdata
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            - v1-dependencies-
+      - run:
+          name: install dependencies
+          command: |
+            gem install bundler -v 1.17.3
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
           name: Database setup
-          command: bundle exec rails db:create && db:migrate
+          command: bundle exec rails db:create && bundle exec rails db:migrate
       - run:
           name: test
           command: bundle exec rails test
-
 workflows:
   version: 2
   build_test_and_deploy:
