--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@1.1.2
-  heroku: circleci/heroku@1.2.3
 
 executors:
   default:
@@ -16,7 +15,7 @@ executors:
 commands:
   bundle-install:
     steps:
-      - ruby-orbs/bundle-install:
+      - ruby/bundle-install:
           bundle_clean: true
           bundle_extra_args: ''
           bundle_gemfile: Gemfile
