--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.7
+      - image: cimg/ruby:2.7-node
     working_directory: ~/search-word-app
     steps:
       - checkout
@@ -13,7 +13,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/ruby:2.7
+      - image: cimg/ruby:2.7-node
       - image: circleci/mysql:5.5
         environment:
           MYSQL_ROOT_PASSWORD: pass
