--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
     working_directory: ~/search-word-app
     steps:
       - checkout
+      - run:
+        name: Install dependencies
+        command: sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
       - run:
           name: Database setup
