--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,6 @@ jobs:
     working_directory: ~/search-word-app
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
 
   test:
@@ -30,7 +27,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: sudo apt-get install -y libmysqlclient-dev
+          command: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
       - run:
           name: Database setup
