--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
     working_directory: ~/search-word-app
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
 
   test:
