--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,22 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@1.1.2
+  ruby: circleci/ruby@1.8.0
+  node: circleci/node@2.0.0
 
 jobs:
   build:
     docker:
-      - image: cimg/ruby:2.5.7
+      - image: cimg/ruby:2.7.2-node 
     working_directory: ~/search-word-app
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
 
   test:
+    parallelism: 3
     docker:
-      - image: cimg/ruby:2.5.7
-      - image: circleci/mysql:5.5
+      - image: cimg/ruby:2.7.2-node
+      - image: cimg/mysql:8.0
         environment:
           MYSQL_ROOT_PASSWORD: pass
     environment:
@@ -28,9 +27,6 @@ jobs:
     working_directory: ~/search-word-app
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev
       - ruby/install-deps
       - run:
           name: Database setup
