--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/ruby:2.7.2-node 
+      - image: cimg/ruby:2.5.7
+      
     working_directory: ~/search-word-app
     steps:
       - checkout
