--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     working_directory: ~/search-word-app
     steps:
       - checkout
-       run:
+      - run:
           name: Install Dependencies
           command:
             sudo apt-get update -qq
