--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - checkout
       - run:
           name: Install Dependencies
-          command:
+          command: |
             sudo apt-get update -qq
             sudo apt-get install -y build-essential nodejs default-mysql-client default-libmysqlclient-dev vim
       - ruby/install-deps
