--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
   test:
     parallelism: 3
     docker:
-      - image: cimg/ruby:2.7.2-node
+      - image: cimg/ruby:2.5.7
       - image: cimg/mysql:8.0
         environment:
           MYSQL_ROOT_PASSWORD: pass
