--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - ruby/install-deps
       - run:
           name: Database setup
-          command: bundle exec rails db:create && db:migrate
+          command: bundle exec rails db:create && bundle exec rails db:migrate
       - run:
           name: test
           command: bundle exec rails test
