--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,9 @@ jobs:
           command: |
             sudo apt-get update -qq
             sudo apt-get install -y build-essential nodejs default-mysql-client default-libmysqlclient-dev vim
-      - ruby/install-deps
+      - run:
+          name: Bundle Install
+          command: bundle install --path vendor/bundle
       - run:
           name: Database setup
           command: bundle exec rails db:create && bundle exec rails db:migrate
