--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
             sudo apt-get update -qq
             sudo apt-get install -y build-essential nodejs default-mysql-client default-libmysqlclient-dev vim
       - run:
-          name: Bundle Install
-          command: bundle install --path vendor/bundle
+          name: Install timezone data
+          command: sudo apt-get install -y tzdata
       - run:
           name: Database setup
           command: bundle exec rails db:create && bundle exec rails db:migrate
