--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     tty: true
     stdin_open: true
     environment:
+      RAILS_ENV: development
+      DB_HOST: db
       MYSQL_ROOT_PASSWORD: pass
     depends_on:
       - db
