--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       name: default_container
     steps:
       - restore_cache:
-          key: v2-photudio-{{ .Branch }}-{{ .Revision }}
+          key: v2-search-word-app-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: v2-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
