--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,10 @@ jobs:
       - restore_cache:
           key: v2-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
-          name: Install MySQL development libraries
-          command: sudo apt-get install -y libmysqlclient-dev
+          name: Update APT repository and Install MySQL development libraries
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y libmysqlclient-dev
       - install_bundler
       - run:
           name: Bundle Install Dependencies
