--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
       - run:
           name: Install timezone data
           command: sudo apt-get install -y tzdata
+      - install_bundler
       - run:
           name: install dependencies
           command: |
