--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            gem install bundler
+            gem install bundler -v 2.3.26
             bundle install --path vendor/bundle
       - run:
           name: Database setup
