--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,8 +106,7 @@ workflows:
             branches:
               only: master
           repo: search-word
-          tag: "${CIRCLE_SHA1}"
-          dockerfile: Dockerfile
+          dockerfile: ~/search-word-app/Dockerfile
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build-and-push-image
@@ -117,4 +116,4 @@ workflows:
           family: "serch-word-task-definition"
           cluster-name: "search-word-ecs-cluster"
           service-name: "search-word-alb-service"
-          container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
+          container-image-name-updates: "container=rails"
