--- a/test/fixtures/blocks.yml
+++ b/test/fixtures/blocks.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  user_id: 1
-
-two:
-  name: MyString
-  user_id: 1
+example_block:
+  name: Example Block
+  user: example_user
