--- a/test/fixtures/urlsets.yml
+++ b/test/fixtures/urlsets.yml
@@ -1,11 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  address: MyString
-  block: one
-
-two:
-  name: MyString
-  address: MyString
-  block: two
+example_urlset:
+  name: Example Urlset
+  address: http://www.example.com
+  block: example_block
