--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            gem install bundler:1.17.3
             bundle install --path vendor/bundle
       - run:
           name: Database setup
