--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
       - run:
           name: Install timezone data
           command: sudo apt-get install -y tzdata
+      - install_bundler
       - run:
           name: Database setup
           command: bundle exec rails db:create && bundle exec rails db:migrate
