--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,7 @@ workflows:
           filters:
             branches:
               only: master
+          extra-build-args: '--build-arg RAILS_MASTER_KEY=${RAILS_MASTER_KEY}'
           repo: search-word
           tag: "${CIRCLE_SHA1}"
           dockerfile: Dockerfile
